kubernetes/apps/dashboards/paperless/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-server-service
  namespace: paperless
spec:
  selector:
    app: paperless-server
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
